# SuperMetal

./: .gitignore  README.md  environment.yml  predict.py  pyproject.toml  requirement.txt  requirements.txt  setup.py  train.py
confidence/: confidence_train.py  dataset.py
data/: split_train_val_test_cleaned.py
data/embeddings_output_test/: 1NS3_chain_0.pt  1Z3A_chain_0.pt  1Z3A_chain_1.pt  2LXH_chain_0.pt  3DGV_chain_0.pt  3DGV_chain_1.pt  3M4G_chain_0.pt  3MA2_chain_0.pt  3MA2_chain_1.pt  4BZ5_chain_0.pt  4LGR_chain_0.pt  4LGR_chain_1.pt  4LNB_chain_0.pt  4U5G_chain_0.pt  4U5G_chain_1.pt  5IY9_chain_2.pt  5IY9_chain_3.pt  5IY9_chain_4.pt  5IY9_chain_5.pt  5IY9_chain_6.pt  5IY9_chain_7.pt  5M8M_chain_0.pt  5ZYA_chain_0.pt  6FUL_chain_0.pt
data/splits/: test_metal3d.txt  train.txt  train_test16.txt  val.txt  val_test16.txt
datasets/: esm_embedding_preparation_metal.py  pdbbind.py  process_mols.py
examples/: README.md
models/: all_atom_score_model.py  score_model.py
scripts/: README.md  train_multi_gpu.sh  train_single_gpu_12gb.sh  upload_cache_to_huggingface.py  upload_to_huggingface.py
supermetal/: __init__.py
utils/: inference_utils.py  metal_num_match.py  metal_properties.py  parsing.py  sampling.py  training.py  utils.py  visualise.py
validation_matrix/: validation_1.py
validation_matrix/metal3d_compare/: analysis_new_main.py  command.sh
validation_matrix/utils/: cluster_centroid.py  find_zinc_pos.py
workdir/large_all_atoms_model/: model_parameters.yml
workdir/large_confidence_model/: model_parameters.yml
(+16 files in other folders)
